# latent-diffusion-from-scratch

./: .gitignore  CLAUDE.md  README.md  download_vae.sh  export_latent_onnx.py  export_unet_onnx.py  figment-plan.md  inference_latent_paired.py  inference_paired.py  interpolate.py  latent-diffusion.fgmt  latent-paired-diffusion.fgmt  latent_diffusion.ipynb  paired-diffusion.fgmt  pose_lines_inference.fgmt  pyproject.toml  resize.py  run-jupyter-lab.sh  start_training.sh  test_onnx.ipynb  train_diffusers.py  train_diffusers_256.py  train_improved.py  train_latent_paired.py  train_onnx_model_local.ipynb  train_paired_256.py  trainer.py  vae_to_onnx.ipynb
